# XiGua

./: .coveragerc  .gitignore  2026-01-30-intro.html  INTRO.md  PREVIEW.md  README.md  USAGE.md  generate_blog.py  generate_intro.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  template.html
.github/workflows/: ci.yml  docs-health.yml  docs.yml  pages.yml
blog/: index.html
coverage/: class_index.html  function_index.html  generate_blog_py.html  generate_intro_py.html  index.html  status.json
docs/: README.md  USAGE.md
posts/: 2026-01-30-intro.md
tests/: conftest.py  test_cli_integration.py  test_generate_blog.py  test_generate_blog_build.py  test_generate_intro.py
